--- a/yocleapp/app/build.gradle
+++ b/yocleapp/app/build.gradle
@@ -2,9 +2,9 @@ apply plugin: 'com.android.application'
 
 configurations.all {
     resolutionStrategy {
-      //  force 'com.android.support:support-v4:23.2.1'
-        force 'com.android.support:customtabs:23.2.1'
-        force 'com.android.support:cardview-v7:23.2.1'
+        force 'com.android.support:support-v4:23.0.1'
+        force 'com.android.support:customtabs:23.0.1'
+        force 'com.android.support:cardview-v7:23.0.1'
     }
 }
 
@@ -14,7 +14,7 @@ android {
     defaultConfig {
         applicationId "com.invest.yocle"
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 23
     }
 //    compileOptions.encoding = 'ISO-8859-1'
     buildTypes {
@@ -35,23 +35,28 @@ android {
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://maven.google.com"
+    }
 }
 
 dependencies {
-//    compile 'com.android.support:design:22.2.0'
-    compile 'com.android.support:design:23.2.1'
-    compile files('libs/YouTubeAndroidPlayerApi.jar')
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:23.2.1'
-    compile 'com.android.support:support-v13:23.2.1'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-//    compile 'com.google.android.gms:play-services:7.5.0'
-    compile 'com.google.android.gms:play-services:7.5.0'
-    compile 'com.facebook.android:facebook-android-sdk:4.+'
- //   compile 'com.github.asne:asne-facebook:0.3.3'
+//  compile 'com.android.support:design:22.2.0'
+//  compile 'com.google.android.gms:play-services:7.5.0'
+//	compile 'com.facebook.android:facebook-android-sdk:4.+'
+//  compile 'com.github.asne:asne-facebook:0.3.3'
 
-    compile files('libs/bugsense-3.6.1.jar')
-    compile files('libs/disklrucache-1.3.1.jar')
-    compile files('libs/picasso-2.2.0.jar')
-    compile files('libs/gson-2.3.1.jar')
+	compile 'com.android.support:design:23.0.1'
+	compile files('libs/YouTubeAndroidPlayerApi.jar')
+	compile fileTree(include: ['*.jar'], dir: 'libs')
+	compile 'com.android.support:support-v4:23.0.1'
+	compile 'com.android.support:support-v13:23.0.1'
+	compile 'com.android.support:appcompat-v7:23.0.1'
+	compile 'com.google.android.gms:play-services:7.5.0'
+	compile 'com.facebook.android:facebook-android-sdk:4.12.0'
+
+	compile files('libs/bugsense-3.6.1.jar')
+	compile files('libs/disklrucache-1.3.1.jar')
+	compile files('libs/picasso-2.2.0.jar')
+	compile files('libs/gson-2.3.1.jar')
 }
