--- a/yocleapp/build.gradle
+++ b/yocleapp/build.gradle
@@ -6,14 +6,16 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.2.3'
+        //classpath 'com.android.tools.build:gradle:2.3.2'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
-
-
 }
 
